tests/diagnostics/functions/returns/missing_return/expect.txt
# exit: 1
input/main.lang0:1:37: error: missing return in function body
  function maybe(x: boolean) -> int64 {
                                      ^
